# oop2024project-frontend

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ForgotPasswordDialog.qml  LoginDialog.qml  RegisterDialog.qml  UserPage.qml  main.cpp  main.qml
src/controller/: AuthController.qml  ChatController.qml  ContactController.qml  MessageController.qml  UserDataController.qml
src/model/: ChatModel.qml  ContactModel.qml  UserModel.qml
src/util/: GlobalPageHelper.qml  GravatarHelper.cpp  GravatarHelper.h  PageHelper.qml  Poller.qml  RequestHelper.qml
src/view/: BlockListDialog.qml  ChangeGroupNameDialog.qml  ChatInput.qml  ChatPage.qml  ChatPanel.qml  ContactPage.qml  CreateGroupDialog.qml  FindGroupDialog.qml  FindUserDialog.qml  ForgotPasswordDialog.qml  FriendApplicationDialog.qml  FriendCandidateListDialog.qml  GroupApplicationDialog.qml  GroupCandidateListDialog.qml  GroupDataDialog.qml  GroupInvitationListDialog.qml  GroupInviteDialog.qml  GroupListView.qml  LoginDialog.qml  MessageDialog.qml  ModifyCommentNameDialog.qml  ModifyEmailDialog.qml  ModifyPasswordDialog.qml  ModifyUserDataDialog.qml  RegisterDialog.qml  UserDataDialog.qml  UserListView.qml  UserPage.qml
